--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <i class="fa-solid fa-otter"></i>
+    <h1>Hellooooo!</h1>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
